--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
     <img src="./assets/images/movie-ranking.png" height="200" alt="Screenshot of movie ranking project"/>
 
-    <h3></h3><a href="./public/birthday-invite.html">Birhtday Invite Project</a></h3>
+    <h3><a href="./public/birthday-invite.html">Birhtday Invite Project</a></h3>
     <img src="./assets/images/birthday-invite.png" height="200" alt="Screenshot of birthday invite project"/>
     <hr />
 
